[package]
name = "bitcoin"
version = "0.18.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bitcoin/"
repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
documentation = "https://docs.rs/bitcoin/"
description = "General purpose library for using and interoperating with Bitcoin and other cryptocurrencies."
keywords = [ "crypto", "bitcoin" ]
readme = "README.md"

[lib]
name = "bitcoin"
path = "src/lib.rs"

[features]
fuzztarget = ["secp256k1/fuzztarget", "bitcoin_hashes/fuzztarget"]
unstable = []
use-serde = ["serde", "bitcoin_hashes/serde"]

[dependencies]
bitcoin-bech32 = "0.9.0"
byteorder = "1.2"
bitcoin_hashes = "0.7.0"
bitcoinconsensus = { version = "0.16", optional = true }
secp256k1 = { package = "secp256k1-pure-rust", git = "https://github.com/LightningPeach/secp256k1-wrapper" }


[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.hex]
version = "=0.3.2"


[dev-dependencies]
serde_derive = "1"
serde_json = "1"
serde_test = "1"
tempfile = "3"
